feat added "hello"

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -13,7 +13,9 @@
 			<main class="main">
 				<section class="section">
 					<div class="container">
-						<h1>We Design Impactful Digital</h1>
+						<div class="hello">
+							<h1>We Design Impactful Digital</h1>
+						</div>
 					</div>
 				</section>
 			</main>
