--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,7 @@
 		<div class="wrapper">
 			@@include('./html/header.html')
 			<main class="main">
-				<section class="section">
-					<div class="container">
-						<div class="hello">
-							<h1>We Design Impactful Digital</h1>
-						</div>
-					</div>
-				</section>
+				@@include('./html/blocks/comments.html')
 			</main>
 			@@include('./html/footer.html')
 		</div>
