feat commets added nav

--- a/src/html/blocks/comments.html
+++ b/src/html/blocks/comments.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section section--bg">
 	<div class="container">
 		<h2 class="section_title section_title--centr comments__title">
 			Let’s hear <br />
@@ -10,11 +10,38 @@
 					<div class="comments__item_text">1Lorem ipsum dolor sit amet, consectetur adipiscing elit. Risus vel lobortis tincidunt fames quisque mauris at diam. Nullam morbi ipsum turpis amet id posuere torto quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
 				</div>
 				<div class="comments__item">
-				<div class="comments__item_text">2Lorem ipsum dolor sit amet, consectetur adipiscing elit. Risus vel lobortis tincidunt fames quisque mauris at diam. Nullam morbi ipsum turpis amet id posuere torto quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
-			</div>
+					<div class="comments__item_text">2Lorem ipsum dolor sit amet, consectetur adipiscing elit. Risus vel lobortis tincidunt fames quisque mauris at diam. Nullam morbi ipsum turpis amet id posuere torto quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
+				</div>
+				<div class="comments__item">
+					<div class="comments__item_text">3Lorem ipsum dolor sit amet, consectetur adipiscing elit. Risus vel lobortis tincidunt fames quisque mauris at diam. Nullam morbi ipsum turpis amet id posuere torto quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
+				</div>
+				<div class="comments__item">
+					<div class="comments__item_text">4Lorem ipsum dolor sit amet, consectetur adipiscing elit. Risus vel lobortis tincidunt fames quisque mauris at diam. Nullam morbi ipsum turpis amet id posuere torto quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
+				</div>
+				<div class="comments__item">
+					<div class="comments__item_text">5Lorem ipsum dolor sit amet, consectetur adipiscing elit. Risus vel lobortis tincidunt fames quisque mauris at diam. Nullam morbi ipsum turpis amet id posuere torto quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
+				</div>
 			</div>
 
 			<nav class="comments_nav">
+				<div class="comments_nav_item">
+					<div class="comments_nav_img_w">
+						<img src="./imgs/comments_img/comments_nav_1.jpeg" alt="" class="comments_nav_img" />
+					</div>
+					<div class="comments_nav__data">
+						<div class="comments_nav_name">Ricky Aprilia</div>
+						<div class="comments_nav_pos">Founder of Varibo</div>
+					</div>
+				</div>
+				<div class="comments_nav_item">
+					<div class="comments_nav_img_w">
+						<img src="./imgs/comments_img/comments_nav_2.jpeg" alt="" class="comments_nav_img" />
+					</div>
+					<div class="comments_nav__data">
+						<div class="comments_nav_name">Ricky Aprilia</div>
+						<div class="comments_nav_pos">Founder of Varibo</div>
+					</div>
+				</div>
 				<div class="comments_nav_item">
 					<div class="comments_nav_img_w">
 						<img src="./imgs/comments_img/comments_nav_3.jpeg" alt="" class="comments_nav_img" />
@@ -26,7 +53,16 @@
 				</div>
 				<div class="comments_nav_item">
 					<div class="comments_nav_img_w">
-						<img src="./imgs/comments_img/comments_nav_3.jpeg" alt="" class="comments_nav_img" />
+						<img src="./imgs/comments_img/comments_nav_4.jpeg" alt="" class="comments_nav_img" />
+					</div>
+					<div class="comments_nav__data">
+						<div class="comments_nav_name">Ricky Aprilia</div>
+						<div class="comments_nav_pos">Founder of Varibo</div>
+					</div>
+				</div>
+				<div class="comments_nav_item">
+					<div class="comments_nav_img_w">
+						<img src="./imgs/comments_img/comments_nav_5.jpeg" alt="" class="comments_nav_img" />
 					</div>
 					<div class="comments_nav__data">
 						<div class="comments_nav_name">Ricky Aprilia</div>
