--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 			@@include('./html/header.html')
 			<main class="main">
 				@@include('./html/blocks/comments.html')
+				@@include('./html/blocks/input.html')
 			</main>
 			@@include('./html/footer.html')
 		</div>
