--- a/src/html/blocks/input.html
+++ b/src/html/blocks/input.html
@@ -5,7 +5,7 @@
 				<h1 class="section__title input_title">How we can help you</h1>
 				<p class="input_descr">Follow our newsletter. We will regulary update our latest project and availability.</p>
 				<div class="input_email">
-					<img src="./imgs/input/input_logo.svg" alt="email" />
+					<img class="email" src="./imgs/input/input_logo.svg" alt="email" />
 					<input class="inputt" placeholder="Enter your email address" type="email" />
 					<button class="btn_sbr">Subscribe</button>
 				</div>
@@ -13,12 +13,12 @@
 			<div class="input_logo">
 				<div class="input_logo_up">
 					<div class="input_logo_item">
-						<img src="./imgs/input/Input_logo_1.svg" alt="1" />
+						<img class="input_logo_img" src="./imgs/input/Input_logo_1.svg" alt="1" />
 						<h1 class="input_logo_title">UI/UX Design</h1>
 						<p class="input_logo_descr">Sometimes features require a short description</p>
 					</div>
 					<div class="input_logo_item">
-						<img src="./imgs/input/Input_logo_2.svg" alt="2" />
+						<img class="input_logo_img" src="./imgs/input/Input_logo_2.svg" alt="2"/>
 						<h1 class="input_logo_title">Logo Branding</h1>
 						<p class="input_logo_descr">Sometimes features require a short description</p>
 					</div>
@@ -26,7 +26,7 @@
 				<div class="input_logo_down">
 					<div class="input_logo_item">
 						<div class="input_logo-bg">
-							<img class="input_logo_img--1" src="./imgs/input/Input_logo_3.svg" alt="3" />
+							<img class=" input_logo_img--1" src="./imgs/input/Input_logo_3.svg" alt="3" />
 						</div>
 						<h1 class="input_logo_title">App Design</h1>
 						<p class="input_logo_descr">Sometimes features require a short description</p>
