--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,1 +1,15 @@
-<header class="header">header</header>
+<header class="header">
+    <div class="container header_in">
+        <div class="header_logo_w">
+            <img src="./imgs/header/header_logo.svg" alt="logo">
+        </div>
+        <div class="header_nav">
+            <nav class="header_nav_w">
+                <li class="header_nav_item"><a class="header_nav_link" href="#">Partners</a></li>
+                <li class="header_nav_item"><a class="header_nav_link" href="#">Our Products</a></li>
+                <li class="header_nav_item"><a class="header_nav_link" href="#">Reviews</a></li>
+                <li class="header_nav_item"><a class="header_nav_link" href="#">Subscribe</a></li>
+            </nav>
+        </div>
+    </div>
+</header>
