feat section footer add and finished

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,44 @@
-<footer class="footer">footer</footer>
+<footer class="footer">
+    <section class="section section--footer">
+        <div class="container">
+            <div class="footer_social">
+                <div class="footer_logo">
+                    <img class="footer_logo_img" src="./imgs/footer/footer_logo.svg" alt="logo">
+                </div>
+                <div class="footer_social_list_w">
+                    <nav class="footer_social_list">
+                        <li class="footer_social_item"><a class="footer_social_img_w" href="#"><img class="footer_social_img" src="./imgs/footer/footer_socail_1.svg" alt="inst"></a></li>
+                        <li class="footer_social_item"><a class="footer_social_img_w" href="#"><img class="footer_social_img" src="./imgs/footer/footer_socail_2.svg" alt="facebook"></a></li>
+                        <li class="footer_social_item"><a class="footer_social_img_w" href="#"><img class="footer_social_img" src="./imgs/footer/footer_socail_3.svg" alt="Twitter"></a></li>
+                        <li class="footer_social_item"><a class="footer_social_img_w" href="#"><img class="footer_social_img" src="./imgs/footer/footer_socail_4.svg" alt="GitHub"></a></li>
+                        <li class="footer_social_item"><a class="footer_social_img_w" href="#"><img class="footer_social_img" src="./imgs/footer/footer_socail_5.svg" alt="inst"></a></li>
+                    </nav>
+                </div>
+            </div>
+            <div class="line">
+                <hr>
+            </div>
+            <div class="footer_nav">
+                <h1 class="section--footer_title">
+                    Company
+                </h1>
+                <div class="footer_nav_list_w">
+                    <nav class="footer_nav_list">
+                        <li class="footer_nav_item_w"><a class="footer_nav_item" href="#">About Us</a></li>
+                        <li class="footer_nav_item_w"><a class="footer_nav_item" href="#">Press</a></li>
+                        <li class="footer_nav_item_w"><a class="footer_nav_item" href="#">Investors</a></li>
+                        <li class="footer_nav_item_w"><a class="footer_nav_item" href="#">Events</a></li>
+                        <li class="footer_nav_item_w"><a class="footer_nav_item" href="#">Terms of use</a></li>
+                        <li class="footer_nav_item_w"><a class="footer_nav_item" href="#">Privacy policy</a></li>
+                    </nav>
+                    <button class="btn_cont">Contact Us</button>
+                </div>
+                <div class="footer_power">
+                    <span class="footer_power_text">
+                        © power 2021 - All Rights Reserved
+                    </span>
+                </div>
+            </div>
+        </div>
+    </section>
+</footer>
