feat section wcw add and finished

--- a/src/html/blocks/input.html
+++ b/src/html/blocks/input.html
@@ -3,11 +3,11 @@
 		<div class="input">
 			<div class="input_content">
 				<h1 class="section__title input_title">How we can help you</h1>
-				<p class="input_descr">Follow our newsletter. We will regulary update our latest project and availability.</p>
+				<p class="section_descr">Follow our newsletter. We will regulary update our latest project and availability.</p>
 				<div class="input_email">
 					<img class="email" src="./imgs/input/input_logo.svg" alt="email" />
 					<input class="inputt" placeholder="Enter your email address" type="email" />
-					<button class="btn_sbr">Subscribe</button>
+					<button class="btn_accent_2">Subscribe</button>
 				</div>
 			</div>
 			<div class="input_logo">
