--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
 	<body>
 		<div class="wrapper">
 			@@include('./html/header.html')
-			<main class="main">@@include('./html/blocks/hero.html') @@include('./html/blocks/trs_by.html') @@include('./html/blocks/comments.html') @@include('./html/blocks/input.html')</main>
+			<main class="main">@@include('./html/blocks/hero.html')
+				 @@include('./html/blocks/trs_by.html')
+				 @@include('./html/blocks/wcw.html')
+				  @@include('./html/blocks/comments.html') 
+				  @@include('./html/blocks/input.html')</main>
 			@@include('./html/footer.html')
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
