feat section hero start

--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -1,5 +1,29 @@
 <section class="section">
-    <div class="container">
-        
-    </div>
+	<div class="container">
+		<div class="hero_content">
+			<div class="hero_content_info">
+				<div class="hero_title">
+					<h1 class="section_title section_title--hero">
+						We Design Impactful ‍Digital
+							<strong>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span></span>
+								Products
+							</strong>
+					</h1>
+				</div>
+				<p class="section_descr">Help find solutions with intitutive and in accordance with client business goals. we provide a high-quality services.</p>
+                <div class="hero_title_bottom">
+                    <button class="btn_accent_1 btn--hero">Contact Us</button>
+                    <a href="#" class="play_btn"><img class="play_btn_img" src="./imgs/hero/play_btn.svg" alt=""></a>
+                    <p class="section_descr">Watch our <br>
+                        introduction video</p>
+                </div>
+               
+			</div>
+			<div class="hero_content_decorbox"></div>
+		</div>
+	</div>
 </section>
