--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -42,7 +42,7 @@
 					<button class="btn_accent_1">Contact Us</button>
 				</div>
 				<div class="footer_power">
-					<span class="footer_power_text"> © power 2021 - All Rights Reserved </span>
+					<a class="footer_power_text" href="#"> © power 2021 - All Rights Reserved </a>
 				</div>
 			</div>
 		</div>
