--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -5,25 +5,51 @@
 				<div class="hero_title">
 					<h1 class="section_title section_title--hero">
 						We Design Impactful ‍Digital
-							<strong>
-								<span></span>
-								<span></span>
-								<span></span>
-								<span></span>
-								Products
-							</strong>
+						<strong>
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+							Products
+						</strong>
 					</h1>
 				</div>
 				<p class="section_descr">Help find solutions with intitutive and in accordance with client business goals. we provide a high-quality services.</p>
-                <div class="hero_title_bottom">
-                    <button class="btn_accent_1 btn--hero">Contact Us</button>
-                    <a href="#" class="play_btn"><img class="play_btn_img" src="./imgs/hero/play_btn.svg" alt=""></a>
-                    <p class="section_descr">Watch our <br>
-                        introduction video</p>
-                </div>
-               
+				<div class="hero_title_bottom">
+					<button class="btn_accent_1 btn--hero">Contact Us</button>
+					<a href="#" class="play_btn"><img class="play_btn_img" src="./imgs/hero/play_btn.svg" alt="" /></a>
+					<p class="section_descr--hero">
+						Watch our <br />
+						introduction video
+					</p>
+				</div>
 			</div>
-			<div class="hero_content_decorbox"></div>
+			<div class="hero_content_decorbox">
+				<span class="hero-decor hero-decor--1"><img src="./imgs/hero/hero_decor_1.svg" alt="1"></span>
+				<span class="hero-decor hero-decor--2"><img src="./imgs/hero/hero_decor_2.svg" alt="1"></span>
+				<span class="hero-decor hero-decor--3"><img src="./imgs/hero/hero_decor_3.svg" alt="1"></span>
+				<span class="hero-decor hero-decor--4"></span>
+					
+				<div class="hero_picture">
+					<div class="hero_picture_in">
+						<img class="hero_decor_box_img" src="./imgs/hero/hero_decor_box.svg" alt="2" />
+					</div>
+				</div>
+				<div class="hero_employess">
+					<div class="hero_employess_photo">
+						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_1.jpeg" alt="1"></div>
+						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_2.jpeg" alt="1"></div>
+						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_3.png" alt="1"></div>
+						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_4.jpeg" alt="1"></div>
+						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_5.jpeg" alt="1"></div>
+					</div>
+					<div class="hero_employess_title"><h1 class="hero_employess_title_txt">120+ employees</h1></div>
+					<div class="hero_employess_likes">
+						<span class="star"></span>
+						5.0 (3.1K Reviews)
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
