feat header links add

--- a/src/html/blocks/comments.html
+++ b/src/html/blocks/comments.html
@@ -1,4 +1,4 @@
-<section class="section section--bg">
+<section id="Reviews" class="section section--bg">
 	<div class="container">
 		<h2 class="section_title section_title--centr comments__title section__decor" >
 			Let’s hear <br />
