--- a/src/html/blocks/trs_by.html
+++ b/src/html/blocks/trs_by.html
@@ -1,4 +1,4 @@
-<section class="section section--bg">
+<section id="Partners" class="section section--bg">
 	<div class="container trs_by">
 		<h1 class="trs_by_title">Trusted by greatest companies</h1>
 		<div class="trs_logo_list swiper_3">
