--- a/src/html/blocks/wcw.html
+++ b/src/html/blocks/wcw.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section id="Products" class="section">
 	<div class="container">
 		<div class="wcw">
 			<h1 class="section_title">We create world-class digital products</h1>
