--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,14 +1,14 @@
 <header class="header">
     <div class="container header_in">
         <div class="header_logo_w">
-            <img src="./imgs/header/header_logo.svg" alt="logo">
+            <a href="#"><img src="./imgs/header/header_logo.svg" alt="logo"></a>
         </div>
         <div class="header_nav">
             <nav class="header_nav_w">
-                <li class="header_nav_item"><a class="header_nav_link" href="#">Partners</a></li>
-                <li class="header_nav_item"><a class="header_nav_link" href="#">Our Products</a></li>
-                <li class="header_nav_item"><a class="header_nav_link" href="#">Reviews</a></li>
-                <li class="header_nav_item"><a class="header_nav_link" href="#">Subscribe</a></li>
+                <li class="header_nav_item"><a class="header_nav_link" href="#Partners">Partners</a></li>
+                <li class="header_nav_item"><a class="header_nav_link" href="#Products">Our Products</a></li>
+                <li class="header_nav_item"><a class="header_nav_link" href="#Reviews">Reviews</a></li>
+                <li class="header_nav_item"><a class="header_nav_link" href="#Subscribe">Subscribe</a></li>
             </nav>
         </div>
     </div>
