--- a/src/html/blocks/input.html
+++ b/src/html/blocks/input.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section id="Subscribe" class="section">
 	<div class="container">
 		<div class="input">
 			<div class="input_content">
