feat landing_agency finish

--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section section--hero">
 	<div class="container">
 		<div class="hero_content">
 			<div class="hero_content_info">
@@ -17,19 +17,21 @@
 				<p class="section_descr">Help find solutions with intitutive and in accordance with client business goals. we provide a high-quality services.</p>
 				<div class="hero_title_bottom">
 					<button class="btn_accent_1 btn--hero">Contact Us</button>
-					<a href="#" class="play_btn"><img class="play_btn_img" src="./imgs/hero/play_btn.svg" alt="" /></a>
-					<p class="section_descr--hero">
-						Watch our <br />
-						introduction video
-					</p>
+					<div class="play_btn_w">
+						<a href="#" class="play_btn"><img class="play_btn_img" src="./imgs/hero/play_btn.svg" alt="" /></a>
+						<p class="section_descr--hero">
+							Watch our <br />
+							introduction video
+						</p>
+					</div>
 				</div>
 			</div>
 			<div class="hero_content_decorbox">
-				<span class="hero-decor hero-decor--1"><img src="./imgs/hero/hero_decor_1.svg" alt="1"></span>
-				<span class="hero-decor hero-decor--2"><img src="./imgs/hero/hero_decor_2.svg" alt="1"></span>
-				<span class="hero-decor hero-decor--3"><img src="./imgs/hero/hero_decor_3.svg" alt="1"></span>
+				<span class="hero-decor hero-decor--1"><img class="hero-decor--1-img" src="./imgs/hero/hero_decor_1.svg" alt="1" /></span>
+				<span class="hero-decor hero-decor--2"><img class="hero-decor--2-img" src="./imgs/hero/hero_decor_2.svg" alt="1" /></span>
+				<span class="hero-decor hero-decor--3"><img class="hero-decor--3-img" src="./imgs/hero/hero_decor_3.svg" alt="1" /></span>
 				<span class="hero-decor hero-decor--4"></span>
-					
+
 				<div class="hero_picture">
 					<div class="hero_picture_in">
 						<img class="hero_decor_box_img" src="./imgs/hero/hero_decor_box.svg" alt="2" />
@@ -37,11 +39,11 @@
 				</div>
 				<div class="hero_employess">
 					<div class="hero_employess_photo">
-						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_1.jpeg" alt="1"></div>
-						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_2.jpeg" alt="1"></div>
-						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_3.png" alt="1"></div>
-						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_4.jpeg" alt="1"></div>
-						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_5.jpeg" alt="1"></div>
+						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_1.jpeg" alt="1" /></div>
+						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_2.jpeg" alt="1" /></div>
+						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_3.png" alt="1" /></div>
+						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_4.jpeg" alt="1" /></div>
+						<div class="hero_employess_photo_item"><img class="hero_photo" src="./imgs/hero/photo_5.jpeg" alt="1" /></div>
 					</div>
 					<div class="hero_employess_title"><h1 class="hero_employess_title_txt">120+ employees</h1></div>
 					<div class="hero_employess_likes">
