--- a/src/html/blocks/wcw.html
+++ b/src/html/blocks/wcw.html
@@ -5,7 +5,7 @@
 			<p class="section_descr">By information about design the world to the best instructors, heatc helping By information</p>
 			<div class="wcw_content">
 				<div class="wcw_content_right">
-					<img src="./imgs/wcw/wcw_img_1.png" alt="1" />
+					<img class="wcw_content_img" src="./imgs/wcw/wcw_img_1.png" alt="1" />
 					<p class="wcw_des">App Design - June 20, 2022</p>
 					<h1 class="wcw_des_title">App Redesign</h1>
 					<p class="wcw_descr">By information about design the world to the best instructors, heatc helping By information about design the world to the best instructors, heatc helping</p>
@@ -13,12 +13,12 @@
 				<div class="wcw_content_left">
 					<div class="wcw_content_left_r">
 						<div class="wcw_content_left_up">
-							<img src="./imgs/wcw/wcw_img_2.png" alt="1" />
+							<img class="wcw_content_img" src="./imgs/wcw/wcw_img_2.png" alt="1" />
 							<p class="wcw_des">App Design - June 20, 2022</p>
 							<h1 class="wcw_des_title">Redesign channel website landng page</h1>
 						</div>
 						<div class="wcw_content_left_down">
-							<img src="./imgs/wcw/wcw_img_3.png" alt="1" />
+							<img class="wcw_content_img" src="./imgs/wcw/wcw_img_3.png" alt="1" />
 							<p class="wcw_des">App Design - June 20, 2022</p>
 							<h1 class="wcw_des_title">Rental Rooms Web 
                                 App Platform </h1>
@@ -26,13 +26,13 @@
 					</div>
 					<div class="wcw_content_left_r">
 						<div class="wcw_content_left_up">
-							<img src="./imgs/wcw/wcw_img_4.png" alt="1" />
+							<img class="wcw_content_img" src="./imgs/wcw/wcw_img_4.png" alt="1" />
 							<p class="wcw_des">App Design - June 20, 2022</p>
 							<h1 class="wcw_des_title">New Locator App For 
                                 a New Company</h1>
 						</div>
 						<div class="wcw_content_left_down">
-							<img src="./imgs/wcw/wcw_img_5.png" alt="1" />
+							<img class="wcw_content_img" src="./imgs/wcw/wcw_img_5.png" alt="1" />
 							<p class="wcw_des">App Design - June 20, 2022</p>
 							<h1 class="wcw_des_title">Calendar App for Big
                                 SASS Company</h1>
