--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,15 +1,19 @@
 <header class="header">
-    <div class="container header_in">
-        <div class="header_logo_w">
-            <a href="#"><img src="./imgs/header/header_logo.svg" alt="logo"></a>
-        </div>
-        <div class="header_nav">
-            <nav class="header_nav_w">
-                <li class="header_nav_item"><a class="header_nav_link" href="#Partners">Partners</a></li>
-                <li class="header_nav_item"><a class="header_nav_link" href="#Products">Our Products</a></li>
-                <li class="header_nav_item"><a class="header_nav_link" href="#Reviews">Reviews</a></li>
-                <li class="header_nav_item"><a class="header_nav_link" href="#Subscribe">Subscribe</a></li>
-            </nav>
-        </div>
-    </div>
+	<div class="container header_in">
+		<div class="header_logo_w">
+			<a href="#"><img src="./imgs/header/header_logo.svg" alt="logo" /></a>
+		</div>
+
+		<nav class="header_nav_w">
+			<ul class="nav_list"> 
+				<li class="header_nav_item"><a class="header_nav_link" href="#Partners">Partners</a></li>
+				<li class="header_nav_item"><a class="header_nav_link" href="#Products">Our Products</a></li>
+				<li class="header_nav_item"><a class="header_nav_link" href="#Reviews">Reviews</a></li>
+				<li class="header_nav_item"><a class="header_nav_link" href="#Subscribe">Subscribe</a></li>
+			</ul>
+			<button class="nav__close"></button>
+		</nav>
+
+		<button class="menu_btn"></button>
+	</div>
 </header>
