--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
 				 @@include('./html/blocks/trs_by.html')
 				 @@include('./html/blocks/wcw.html')
 				  @@include('./html/blocks/comments.html') 
-				  @@include('./html/blocks/input.html')</main>
+				  @@include('./html/blocks/input.html')
+				</main>
 			@@include('./html/footer.html')
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
