--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -39,7 +39,7 @@
 						<li class="footer_nav_item_w"><a class="footer_nav_item" href="#">Terms of use</a></li>
 						<li class="footer_nav_item_w"><a class="footer_nav_item" href="#">Privacy policy</a></li>
 					</nav>
-					<button class="btn_accent_1">Contact Us</button>
+					<a href="tel:+3806712345" class="btn_accent_1">Contact Us</a>
 				</div>
 				<div class="footer_power">
 					<a class="footer_power_text" href="#"> © power 2021 - All Rights Reserved </a>
